<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Yammer</string>
	<string name="request_authorization">Authorizing your account</string>
	<string name="request_access">Requesting access</string>
	<string name="reply">Reply</string>
	<string name="yam_prompt">What are you working on?</string>
	<string name="reply_label">Reply</string>
	<string name="delete_label">Delete</string>
	<string name="popup_title_label">Yammer</string>
	<string name="follow_label">Follow</string>
	<string name="unfollow_label">Unfollow</string>
	<string name="cancel_label">Cancel</string>
	<string name="a_moment_ago">a moment ago</string>
	<string name="setting_define_timer">Updates</string>
	<string name="save">Save</string>
    <string name="ok">OK</string>	
	<string name="cancel">Cancel</string>
	<string name="about">About</string>
	<string name="menu_networks">Networks</string>
	<string name="menu_feeds">Feeds</string>
	<string name="menu_directory">Directory</string>
	<string name="menu_reload">Reload</string>
	<string name="menu_settings">Settings</string>
	<string name="users">Users</string>
	<string name="view_message_label">View message</string>
	<string name="view_thread_label">View thread</string>
	<string name="days_ago">days ago</string>
	<string name="minutes_ago">minutes ago</string>
	<string name="one_minute_ago">one minute ago</string>
	<string name="hours_ago">hours ago</string>
	<string name="a_few_minutes_ago">a few minutes ago</string>
	<string name="about_half_an_hour_ago">about half an hour ago</string>
	<string name="about_an_hour_ago">about an hour ago</string>
	<string name="new_yammer_message">New Yammer message</string>
	<string name="please_authorize">Please authorize!</string>
	<string name="loading">Loading...</string>
	<string name="unknown">Unknown</string>
	<plurals name="new_messages_available">
		<item quantity="one">There is 1 new Yammer message in your network</item>
		<item quantity="other">There are %s new Yammer messages in your network</item>
	</plurals>
	<string name='select_network'>Select Network</string>
	<string name='changing_network_text'>Changing network to: %s</string>
	<string name='select_feed'>Select Feed</string>
	<string name='changing_feed_text'>Changing feed to: %s</string>
	<string name='application_update_title'>Yammer Updated</string>
	<string name='application_update_text'>A new version of Yammer is available.</string>
	<string name="about_text">Yammer v%s\n© 2009 Yammer, Inc.\nhttp://www.yammer.com/</string>
	<string name="about_disclaimer"></string>
	<string name="setting_select_active_account">Select active account</string>
	<string name="url_icon">&#x2192;</string>
	<string name="check_this_out">Check this out:</string>
	<string name="in_reply_to">in reply to</string>

	<string name="auth_welcome_text">Welcome!\nPlease enter your login credentials.</string>
	<string name="auth_email_label_text">Email</string>
	<string name="auth_password_label_text">Password</string>
	<string name="auth_login_button_text">Login</string>
	<string name="auth_login_button_text_alt">Logging in...</string>
	<string name="auth_error_401_text">The username or password is invalid or the network is disabled.</string>
	<string name="auth_error_403_text">Your network uses single-sign-on.  Please speak with someone in your IT department.</string>
	<string name="auth_error_500_text">Server error, please try again later.</string>

	<string name="pref_update_on_resume_title">Update on Resume</string>
	<string name="pref_update_on_resume_summary">Should Yammer update messages when you switch to it?</string>
	
	<string name="pref_message_click_title">Message Click</string>
	<string name="pref_message_click_summary">What should happen when a message is clicked.</string>
	<string name="pref_message_click_dialog_title">Message Click Action</string>
	
	
	<string name="pref_updates_title">Updates</string>
	<string name="pref_updates_summary">How often should the application check Yammer for new messages?</string>
	<string name="pref_updates_options_title">Update Frequency</string>
	
	<string name="pref_category_account">Account</string>
    <string name="pref_category_connection">Connection</string>
    <string name="pref_url_title">Yammer URL</string>
    <string name="pref_url_summary">URL used to contact Yammer\'s server.</string>
    <string name="pref_url_default">https://www.yammer.com</string>
	<string name="updated_at_header">\'Updated at:\' hh:mm a MM/dd/yy</string>
</resources>
